gitops/infrastructure/networking/httproutes/home-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-http-redirect
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: web
  hostnames:
    - "*.home"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
