gitops/infrastructure/networking/httproutes/routes-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-dev
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames: [ "minio-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: minio, port: 9001 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-dev
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames: [ "pgadmin-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: pgadmin, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag-dev
  sectionName: websecure
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
  hostnames: [ "wallabag-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: wallabag, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-dev
  namespace: networking
  sectionName: websecure
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
  hostnames: [ "n8n-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-dev-forwardauth
      backendRefs: [ { name: n8n, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-dev
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames: [ "authentik-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: authentik, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodered-dev
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames: [ "nodered-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-dev-forwardauth
      backendRefs: [ { name: nodered, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docmost-dev
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames: [ "docmost-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-dev-forwardauth
      backendRefs: [ { name: docmost, port: 80 } ]
