gitops/infrastructure/networking/httproutes/routes-docker.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockge
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - dockge.home
  rules:
    - backendRefs:
        - name: dockge
          port: 5001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - portainer.home
  rules:
    - backendRefs:
        - name: portainer
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - qbittorrent.home
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
