gitops/infrastructure/networking/httproutes/routes-media.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - jellyfin.home
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - qbittorrent.home
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8701
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - radarr.home
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - sonarr.home
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - lidarr.home
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - prowlarr.home
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - seerr.home
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-v2
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - whisparr-v2.home
  rules:
    - backendRefs:
        - name: whisparr-v2
          port: 6969
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-v3
  namespace: networking
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - whisparr-v3.home
  rules:
    - backendRefs:
        - name: whisparr-v3
          port: 6970
